{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 294,
  "lineage": "837fac7c-d2b6-26ae-9a92-8fa3770e50c5",
  "resources": [
    {
      "module": "module.ELB",
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "TGS-awx-WAS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:targetgroup/LB-TGS-awx-WAS/2e79ac932af02515",
            "arn_suffix": "targetgroup/LB-TGS-awx-WAS/2e79ac932af02515",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:targetgroup/LB-TGS-awx-WAS/2e79ac932af02515",
            "load_balancing_algorithm_type": "round_robin",
            "name": "LB-TGS-awx-WAS",
            "port": 81,
            "protocol": "HTTP",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "LB-TGS-awx-WAS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          }
        }
      ]
    },
    {
      "module": "module.ELB",
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "TGS-awx-WEB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:targetgroup/LB-TGS-awx-WEB/61c8e287eec5a33d",
            "arn_suffix": "targetgroup/LB-TGS-awx-WEB/61c8e287eec5a33d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:targetgroup/LB-TGS-awx-WEB/61c8e287eec5a33d",
            "load_balancing_algorithm_type": "round_robin",
            "name": "LB-TGS-awx-WEB",
            "port": 80,
            "protocol": "HTTP",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "LB-TGS-awx-WEB"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          }
        }
      ]
    },
    {
      "module": "module.ELB",
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg-awx-private-waselb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:security-group/sg-0999824309f300584",
            "description": "Middleware WAS - ALB security group",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "SG-awx-private-waselb"
                ]
              }
            ],
            "id": "sg-0999824309f300584",
            "name": "SG-awx-private-waselb",
            "tags": {
              "Name": "SG-awx-private-waselb"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          }
        }
      ]
    },
    {
      "module": "module.ELB",
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg-awx-public-webelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:security-group/sg-0743aae7fe39d904e",
            "description": "Front-end Web - ALB security group",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "SG-awx-public-webelb"
                ]
              }
            ],
            "id": "sg-0743aae7fe39d904e",
            "name": "SG-awx-public-webelb",
            "tags": {
              "Name": "SG-awx-public-webelb"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          }
        }
      ]
    },
    {
      "module": "module.ELB",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc-id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:vpc/vpc-0b0b2defe7d7e67e3",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0dc538ac1fe438220",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0970197a7d026ae63",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "VPC-awx"
                ]
              }
            ],
            "id": "vpc-0b0b2defe7d7e67e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06d6c46c12e91cdbc",
            "owner_id": "374456436099",
            "state": "available",
            "tags": {
              "Name": "VPC-awx"
            }
          }
        }
      ]
    },
    {
      "module": "module.ELB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-awx-WAS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:loadbalancer/app/ALB-awx-WAS/7bfde2b5fa9d6a66",
            "arn_suffix": "app/ALB-awx-WAS/7bfde2b5fa9d6a66",
            "dns_name": "internal-ALB-awx-WAS-1150455371.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:loadbalancer/app/ALB-awx-WAS/7bfde2b5fa9d6a66",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-awx-WAS",
            "security_groups": [
              "sg-0999824309f300584"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0897d2adfaec4cc57"
              },
              {
                "subnet_id": "subnet-0bc273d4a7c0f5124"
              }
            ],
            "subnets": [
              "subnet-0897d2adfaec4cc57",
              "subnet-0bc273d4a7c0f5124"
            ],
            "tags": {
              "Name": "ALB-awx-WAS"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3",
            "zone_id": "ZWKZPGTI48KDX"
          }
        }
      ]
    },
    {
      "module": "module.ELB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-awx-WEB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:loadbalancer/app/ALB-awx-WEB/392cd88431ece9b2",
            "arn_suffix": "app/ALB-awx-WEB/392cd88431ece9b2",
            "dns_name": "ALB-awx-WEB-827544100.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:loadbalancer/app/ALB-awx-WEB/392cd88431ece9b2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-awx-WEB",
            "security_groups": [
              "sg-0743aae7fe39d904e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00fe76c966740a940"
              },
              {
                "subnet_id": "subnet-0831519e3ef8d899a"
              }
            ],
            "subnets": [
              "subnet-00fe76c966740a940",
              "subnet-0831519e3ef8d899a"
            ],
            "tags": {
              "Name": "ALB-awx-WEB"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3",
            "zone_id": "ZWKZPGTI48KDX"
          }
        }
      ]
    },
    {
      "module": "module.ELB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ALB-awx-WAS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:listener/app/ALB-awx-WAS/7bfde2b5fa9d6a66/acc13ec79218fe68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:targetgroup/LB-TGS-awx-WAS/2e79ac932af02515",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:listener/app/ALB-awx-WAS/7bfde2b5fa9d6a66/acc13ec79218fe68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:loadbalancer/app/ALB-awx-WAS/7bfde2b5fa9d6a66",
            "port": 81,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.ELB.aws_lb.ALB-awx-WAS"
          ]
        }
      ]
    },
    {
      "module": "module.ELB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ALB-awx-WEB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:listener/app/ALB-awx-WEB/392cd88431ece9b2/a161aedc72709eb5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:targetgroup/LB-TGS-awx-WEB/61c8e287eec5a33d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:listener/app/ALB-awx-WEB/392cd88431ece9b2/a161aedc72709eb5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:374456436099:loadbalancer/app/ALB-awx-WEB/392cd88431ece9b2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.ELB.aws_lb.ALB-awx-WEB"
          ]
        }
      ]
    }
  ]
}